--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
       run: |
-        nmp install
+        npm install
         npm test
       env:
         CI: true
